# AED2324_PRJ1_G117

./: .gitignore  CMakeLists.txt  changes.csv
Code/: CMakeLists.txt  students_classes.csv
Code/source/: App.cpp  App.h  Class.cpp  Class.h  Menu.cpp  Menu.h  Reader.cpp  Reader.h  Schedule.cpp  Schedule.h  SchedulePrinter.cpp  SchedulePrinter.h  Student.cpp  Student.h  Uc.cpp  Uc.h  Writer.cpp  Writer.h  main.cpp  structs.h
Documentation/: doxyfile
Documentation/html/: _app_8h_source.html  _class_8h_source.html  _menu_8h_source.html  _reader_8h_source.html  _schedule_8h_source.html  _schedule_printer_8h_source.html  _sort_8h_source.html  _student_8h_source.html  _uc_8h_source.html  _writer_8h_source.html  annotated.html  class_app-members.html  class_app.html  class_class-members.html  class_class.html  class_menu-members.html  class_menu.html  class_reader-members.html  class_reader.html  class_schedule_printer-members.html  class_schedule_printer.html  class_schedule_writer-members.html  class_schedule_writer.html  class_scheduler-members.html  class_scheduler.html  class_sort-members.html  class_sort.html  class_student_schedule-members.html  class_student_schedule.html  class_uc-members.html  class_uc.html  classes.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_func.html  index.html  menudata.js  (+11 more)
source/: App.cpp  App.h  Class.cpp  Class.h  Menu.cpp  Menu.h  Reader.cpp  Reader.h  Schedule.cpp  Schedule.h  SchedulePrinter.h  Sort.cpp  Sort.h  Student.cpp  Student.h  Uc.cpp  Uc.h  Writer.cpp  Writer.h  main.cpp  structs.h
(+47 files in other folders)
